add api to pause job
